# AllocatorMemoBuilder

./: .env.example  .gitignore  BRANCHING.md  README.md  amb  launch  requirements.txt  test
backend/: pyproject.toml
backend/amb_core/: __init__.py  audit.py  benchmarks.py  coercion.py  config.py  demo.py  errors.py  export.py  ingest.py  llm.py  marketdata.py  memo.py  metrics.py  models.py  pipeline.py  readiness.py  retrieval.py  scoring.py  serve.py
backend/amb_core/assets/: fonts.css  memo.css  memo.js  theme.css
data/benchmarks/: sp500_monthly.csv
data/mandates/: default.yaml
data/samples/: funds.csv  generate.py  returns.csv
docs/: SPEC.md
docs/decisions/: 0001-cli-first-development.md  0002-deterministic-retrieval-over-rag.md  0003-structured-claims-memo.md  0004-metrics-engine-source-of-truth.md  0005-benchmark-snapshotting.md  0006-branching-model.md  0007-local-first-storage-sqlite.md  0008-anthropic-direct-model-access.md  0009-local-first-surface.md  README.md
tests/: conftest.py  test_export.py  test_ingest.py  test_memo.py  test_metrics.py  test_phase3.py  test_scoring.py
