[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amb-core"
version = "0.1.0"
description = "AllocatorMemoBuilder core: ingest -> metrics -> scoring -> auditable IC memo"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "pydantic-settings",
  "pandas",
  "numpy",
  "pyyaml",
  "anthropic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["amb_core*"]
